# cloud-ide

./: index.html  package-lock.json  package.json
.github/workflows/: sync-readme.yml
cloud-ide/: .gitignore  package-lock.json  package.json
cloud-ide/.github/workflows/: sandbox-ci.yml  sync-readme.yml
cloud-ide/backend/: .gitignore  package-lock.json  package.json  server.js  test-vfs.js  tsconfig.json
cloud-ide/backend/scripts/: test-sandbox.js
cloud-ide/backend/src/: server.js  server.ts
cloud-ide/frontend/: jest.config.cjs  package.json  ts.config.json
cloud-ide/frontend/src/: App.jsx  EditorComponent.jsx  EnvironmentManager.jsx  TerminalComponent.jsx  github.js  main.jsx
cloud-ide/opensandbox/: boot-engine.js
cloud-ide/pipeline/: ContextManager.ts  StageOrchestrator.ts
cloud-ide/pipeline/types/: stage.ts
cloud-ide/shared/: index.ts  package.json  tsconfig.json
cloud-ide/shared/types/: builder.ts  env.ts  sandbox.ts  sync.ts
cloud-ide/shared/utils/: ConfigParser.ts  DockerGenerator.ts  dockergen.ts  hasher.ts  optimise.ts  (+3 more)
cloud-ide/src/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
cloud-ide/src/backend/src-rust/: .gitignore  Cargo.toml  build.rs  package.json
cloud-ide/src/backend/src-rust/src/: lib.rs
cloud-ide/src/backend/src-rust/src/api/: index.d.ts
cloud-ide/src/backend/src-rust/src/engine/: mod.rs  opensandbox.rs  test.rs  tests.rs
src/: App.css  App.jsx  EditorComponent.jsx  FileExplorer.jsx  TerminalComponent.jsx  github.js  index.css  wasmWorker.js
src/repl/: rubyWorker.js
(+259 files in other folders)
